2004-08-04  MenTaLguY  <mental@rydia.net>

	* configure.in, src/gc-object.h, src/refcounted.h:

	  start using libgc in earnest; Inkscape::Refcounted is now GC-aware

2004-08-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/nodepath.cpp: Cleanups: Mark some things as static.  Switch from
	  pointer to reference in some places. Make const placement conform to
	  CodingStyle.

	* src/inkview.cpp (sp_svgview_main_key_press): Accept some common keys
	  like PgUp, q.

	* src/draw-context.cpp (fit_and_split):
	  Slight simplification: don't handle impossible condition npoints < 2.
	* src/proofs: Update accordingly.  (Also add some bezier-utils proofs.)

2004-08-03  MenTaLguY  <mental@rydia.net>

	* src/dialogs/rdf.cpp, src/xml/repr-util.cpp, src/xml/repr.h:
	  removed sp_repr_recursive_drop() which is unneeded and
	  creates unnecessary thrash in the undo logs

	* src/livarot/Shape.h, src/livarot/Shape.cpp,
	  src/livarot/ShapeSweep.cpp, src/livarot/ShapeMisc.cpp:
	  
	  experiment to replace ad-hoc realloc() arrays with std::vector

2004-08-02  MenTaLguY  <mental@rydia.net>

	* configure.in: sigc++ 2.0.2 (and before?) has a bug that
	  causes us to crash.  require >= 2.0.3

	* src/Makefile.am, src/Makefile_insert, src/gc-core.h,
	  src/gc-object.h, src/algorithms/longest-common-suffix.h,
	  src/traits/list.h, src/traits/reference.h, src/util/flip.h,
	  src/util/fold.h, src/util/list-iterator.h, src/util/list.h,
	  src/util/map.h, src/util/parent-axis.h, src/util/reverse.h,
	  src/util/sibling-axis.h, src/util/tuple.h, src/util/zip.h:

	  more "functional" work

2004-08-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/curve.cpp, src/display/curve.h:
	  Greater conformance with CodingStyle.

2004-07-31  David Turner

	* dialogs/xml-tree.cpp: Improved focus, added keystroke for attr commit.

2004-07-31  Ted Gould  <ted@gould.cx>

	* src/extension/extension.cpp,
	src/extension/implementation/implementation.cpp,